--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "country-flag-icons": "^1.5.5",
     "hamburger-react": "^2.5.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-flagkit": "^2.0.4",
     "react-gallery-carousel": "^0.4.0",
